--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,78 +1,55 @@
 @import "~bootstrap/scss/bootstrap";
 
-@import "~bootstrap/scss/bootstrap";
-
-body {
-    background-color: lightgray;
-}
 
 /* Login page gradient */
 .gradient-custom {
-/* fallback for old browsers */
-background: rgb(58,119,180);
+    /* fallback for old browsers */
+    background: rgb(58,119,180);
+    
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(90deg, rgba(58,119,180,1) 0%, rgba(29,212,253,0) 50%, rgba(252,69,69,1) 100%);
+    
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(90deg, rgba(58,119,180,1) 0%, rgba(29,212,253,0) 50%, rgba(252,69,69,1) 100%);
+}
 
-/* Chrome 10-25, Safari 5.1-6 */
-background: -webkit-linear-gradient(90deg, rgba(58,119,180,1) 0%, rgba(29,212,253,0) 50%, rgba(252,69,69,1) 100%);
 
-/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-background: linear-gradient(90deg, rgba(58,119,180,1) 0%, rgba(29,212,253,0) 50%, rgba(252,69,69,1) 100%);
+body {
+    background-color: white;
+}
+
+p {
+    color: goldenrod;
 }
 
 img {
-    max-width: 300px;
-    max-height: 500px;
+    width: 300px;
 }
 
-
 #gridGallery {
-    max-width: 1170px;
+    max-width: 100vw;
     margin-left: auto;
     margin-right: auto;
 }
-  
+
 .box {
-    background-position: center center;
-    background-size: cover;
-    border: 1px solid #fff;
-    transition: opacity .25s;
-    overflow: hidden;
+    border: 1px solid goldenrod;
+    border-radius: 5px;
+    margin: 1rem;
+}
+
+.box img {
+    max-height: 300px;
+    margin: 10px;
 }
    
-#boxOne,#boxTwo,
-#boxSeven,#boxEight {
-    height: 300px;
-}
-  
-#boxThree,#boxFour,
-#boxFive,#boxSix {
-    height: 150px;
-}
-  
-#gridGallery > .row {
-    margin: 0;
+#boxOne {
+    width: 850px;
+    height: 400px;
 }
 
+#boxTwo {
+    width: 350px;
+    height: 400px;
+}
   
-  @media (max-width: 768px) {
-    #boxThree,
-    #boxFour,
-    #boxFive,
-    #boxSix {
-      height: 300px;
-    }
-
-    .box {
-      max-height: 150px !important;
-    }
-
-    #gridGallery .row {
-      background-color: transparent;
-    }
-
-    .mobileFunction {
-      float: left;
-      height: 150px;
-      width: 100%;
-    }
-
-  }
