--- a/templates/main/accueil.html.twig
+++ b/templates/main/accueil.html.twig
@@ -1,9 +1,5 @@
 {% extends 'base.html.twig' %}
 
-{% block stylesheets %}
-    {{ encore_entry_link_tags('app') }}
-{% endblock %}
-
 
 {% block body %}
 
@@ -69,106 +65,65 @@
     </div>
 </section>
 
-<section class="container">
-    <div class="row p-4 m-4 rounded">
-        {% for posts in post %}
-            <div class="col-4">
-
-                    <article class="card mb-4" id="art1">
-                        <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}">
-
-                        <div class="card-body d-flex justify-content-center align-content-center">
-                        {% if posts.mediaUrl is not null %}
-                            <img src="upload/images/{{ asset(posts.mediaUrl) }}">
-                        {% endif %}
-                        </div>
-                        <p class="mx-4 text-center">{{ posts.description | striptags }}</p>
-
-                        </a>
-                    </article>
-
-            </div>
-        {% endfor %}  
-    </div>
-</section>
 
 
 <section id="gridGallery">
     <div class="container">
-
         <div class="row">
-            <div class="col-sm-6 col-xs-6 box" id="boxOne">
-                <div class="toggleIcon"></div>
-                <div class="col-sm-6 captionBox hiddenText">
-                    <h3>Here is some text</h3>
-                    <p>1.</p>
-                    <p>1.1</p>
-                </div>
-            </div>
 
-            <div class="col-sm-3 col-xs-6 box" id="boxTwo">
-                <div class="toggleIcon"></div>
-                <div class="col-sm-6 captionBox hiddenText">
-                    <h3>Here is some text</h3>
-                    <p>2</p>
-                </div>
-            </div>
+            {% set switchBox = false %}
 
-            <div class="col-sm-3 col-xs-6 box" id="boxThree">
-                <div class="toggleIcon"></div>
-                <div class="col-sm-6 captionBox hiddenText">
-                    <h3>Here is some text</h3>
-                    <p>3</p>
-                </div>
-            </div>
+            {% for posts in post %}
+                {% if loop.index is odd %}
+                    {% if switchBox %}
+                        <div class="box" id="boxTwo">
+                    {% else %}
+                        <div class="box" id="boxOne">
+                    {% endif %}
+                        <!-- Contenu pour les posts avec un ID pair -->
+                        <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}">
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    {% if posts.mediaUrl is not null %}
+                                        <img src="upload/images/{{ asset(posts.mediaUrl) }}">
+                                    {% endif %}
+                                </div>
+                                <div class="col-sm-6">
+                                    <p>{{ posts.description | striptags }}</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                {% else %}
+                    {% if switchBox %}
+                        <div class="box" id="boxOne">
+                    {% else %}
+                        <div class="box" id="boxTwo">
+                    {% endif %}
+                        <!-- Contenu pour les posts avec un ID impair -->
+                        <a href="{{ path('app_posts_show', {'slug': posts.slug}) }}">
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    {% if posts.mediaUrl is not null %}
+                                        <img src="upload/images/{{ asset(posts.mediaUrl) }}">
+                                    {% endif %}
+                                    <p class="m-3">{{ posts.description | striptags }}</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                {% endif %}
 
-            <div class="col-sm-3 col-xs-6 box" id="boxFour">
-                <div class="toggleIcon"></div>
-                <div class="col-sm-6 captionBox hiddenText">
-                    <h3>Here is some text</h3>
-                    <p>4</p>
-                </div>
-            </div>
-
-            <div class="col-sm-6 col-xs-6 pull-right box" id="boxEight">
-                <div class="toggleIcon"></div>
-                <div class="col-sm-6 captionBox hiddenText">
-                    <h3>Here is some text</h3>
-                    <p>5.</p>
-                </div>
-            </div>
-
-            <div class="col-sm-3 col-xs-6 pull-right box" id="boxSeven">
-                <div class="toggleIcon"></div>
-                <div class="col-sm-6 captionBox hiddenText">
-                    <h3>Here is some text</h3>
-                    <p>6</p>
-                </div>
-            </div>
-
-            <div class="col-sm-3 col-xs-6 box" id="boxFive">
-                <div class="toggleIcon"></div>
-                <div class="col-sm-6 captionBox hiddenText bottomRight">
-                    <h3>Here is some text</h3>
-                    <p>7</p>
-                </div>
-            </div>
-
-            <div class="col-sm-3 col-xs-6 box" id="boxSix">
-                <div class="toggleIcon"></div>
-                <div class="col-sm-6 captionBox hiddenText bottomRight">
-                    <h3>Here is some text</h3>
-                    <p>8</p>
-                </div>
-            </div>
+                {% if loop.index is divisible by 2 %}
+                    {% set switchBox = not switchBox %}
+                {% endif %}
+            {% endfor %}
 
         </div>
         <!--.row-->
 
     </div>
     <!--.container-->
-
-
 </section>
 
 
