--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -173,7 +173,7 @@
     --bs-gutter-x: 0rem;
 }
 
-// -------------------- Grid Aniation --------------------
+// -------------------- Grid Animation --------------------
 .animate-text
 {
   opacity:0;
@@ -193,12 +193,57 @@
   opacity:1;
 }
 
-#mobileIframe {
-    display: none;
+
+// ---------- animation gauche ----------
+.fade-in-left {
+    opacity: 0;
+    transform: translateX(-2000px);
+    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+
+.fade-in-left.active {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+// ---------- animation droite ----------
+.fade-in-right {
+    opacity: 0;
+    transform: translateX(2000px);
+    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+
+.fade-in-right.active {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+// ---------- animation haut ----------
+.fade-in-up {
+    opacity: 0;
+    transform: translateY(-2000px);
+    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+
+.fade-in-up.active {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+// ---------- animation bas ----------
+.fade-in-down {
+    opacity: 0;
+    transform: translateY(2000px);
+    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+
+.fade-in-down.active {
+    opacity: 1;
+    transform: translateY(0);
 }
 
 @media (max-width: 1199.98px) { 
-    #homeDescription {
+    #titleDesc {
         width: 100vw !important;
         height: 100vh !important;
         position: relative;
@@ -252,15 +297,3 @@
  }
 
 
-#homeDescription {
-    width: 50vw!important;
-    height: 100vh!important;
-    opacity: 0;
-    transform: translateX(-200px);
-    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
-}
-
-#homeDescription.fade-in-left {
-    opacity: 1;
-    transform: translateX(0);
-}
