--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -4,26 +4,38 @@
 <div id="faArrow" class="text-center">
     <i class="fa-solid fa-circle-arrow-down fa-bounce" style="color: #000000 #ffffff; font-size: 2.5rem;"></i>
 </div>
+
 <section class="container d-flex" id="home">
     <div class="row">
+
         <div class="col-lg-6 d-flex justify-content-center align-items-center" id="homeDescription">
             <div>
-                <div id="titleDesc" class="d-flex flex-column justify-content-center align-items-center">
+                <div id="titleDesc" class="d-flex flex-column justify-content-center align-items-center fade-in-left">
                     <h1 class="display-4 fst-italic">La Clunysoise</h1>
                     <p class="text-center ps-3 pe-3">L'entreprise « La Clunysoise » est une société d'ambulances privée située à Cluny. Avec à disposition des ambulances, des VSL, mais aussi des taxis.La Clunysoise apporte une réponse efficace et dynamique à toute demande de transports médicalisés ou non tout en participant activement aux besoins permanents d'interventions d'urgences et transferts inter hospitaliers effectués en collaboration avec le Samu et le centre d'appel 15.</p>
                 </div>
-                <div class="d-flex row" id="buttonsContainer">
-                        <button type="button" class="btn bg-primary text-decoration-none"><a class="text-white text-decoration-none d-flex align-items-center justify-content-center" href="/contact">Contactez Nous</a></button>
-                        <button type="button" class="btn bg-primary d-flex align-items-center justify-content-center text-decoration-none"><a class="text-white text-decoration-none d-flex align-items-center justify-content-center" href="/vos-rendez-vous">Prenez Rendez-Vous</a></button>
-                        <button type="button" class="btn bg-primary d-flex align-items-center justify-content-center text-decoration-none"><a class="text-white text-decoration-none d-flex align-items-center justify-content-center" href="/nous-rejoindre">Rejoignez Nous</a></button>
-                    </div>
+
+                <div id="buttonsContainer" class="d-flex row fade-in-up">
+
+                        <button type="button" class="btn bg-primary text-decoration-none">
+                            <a class="text-white text-decoration-none d-flex align-items-center justify-content-center" href="/contact">Contactez Nous</a>
+                        </button>
+
+                        <button type="button" class="btn bg-primary d-flex align-items-center justify-content-center text-decoration-none">
+                            <a class="text-white text-decoration-none d-flex align-items-center justify-content-center" href="/vos-rendez-vous">Prenez Rendez-Vous</a>
+                        </button>
+
+                        <button type="button" class="btn bg-primary d-flex align-items-center justify-content-center text-decoration-none">
+                            <a class="text-white text-decoration-none d-flex align-items-center justify-content-center" href="/nous-rejoindre">Rejoignez Nous</a>
+                        </button>
+                    
                 </div>
             </div>
         </div>
 
         
         <div class="col-lg-6">
-            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
+            <div id="carouselExampleAutoplaying" class="carousel slide fade-in-right" data-bs-ride="carousel" data-bs-pause="false">
                 <div id="carousel" class="carousel-inner text-center">
                     <div class="carousel-item active" data-bs-interval="3900">
                             <div class="d-flex justify-content-center align-items-center d-block w-100">
@@ -137,16 +149,4 @@
     <iframe id="mobileIframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2749.5379384110347!2d4.652024377356847!3d46.438037267937126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f30aeb8182f371%3A0xbf3199329fef4a95!2sLA%20CLUNYSOISE%20AMBULANCES%20ET%20TAXIS!5e0!3m2!1sfr!2sfr!4v1690210543131!5m2!1sfr!2sfr" width="600" height="1000" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 
-
-<script>
-
-    document.addEventListener("DOMContentLoaded", function() {
-
-        const homeDescription = document.getElementById("homeDescription");
-        
-        setTimeout(function() {
-            homeDescription.classList.add("fade-in-left");
-        }, 100);
-    });
-</script>
 {% endblock %}
